language/move-lang/tests/move_check/expansion/public_script_main.move
script {
public(script) fun main() {
}
}
